# haskell-easy

./: CHANGELOG.md  haskell-easy.cabal
.github/: action.yaml
.github/workflows/: test.yaml
lib/: LongestPrefix.hs  PalindromeNumber.hs  RomanNumerals.hs
test/: LongestPrefixSpec.hs  PalindromeNumberSpec.hs  RomanNumeralsSpec.hs
