cabal-version:      2.4
name:               haskell-easy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Freyert
maintainer:         Freyert@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: RomanNumerals, PalindromeNumber, LongestPrefix

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010


test-suite leet
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules: RomanNumeralsSpec, PalindromeNumberSpec, LongestPrefixSpec
    build-depends: base, hspec, haskell-easy
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options: -Wall

